[metadata]
name = altocumulus
version = 0.1
description-file =
    README.md
author = Ian Unruh
author-email = ianunruh@gmail.com

#install-requires =
#    PyYAML
#    Flask

[files]
packages =
    altocumulus

[entry_points]
console_scripts =
    altocumulus-api = altocumulus.api:main
    hpb-linuxbridge-agent = altocumulus.ml2.hpb_bridge_agent:main

neutron.ml2.mechanism_drivers =
    cumulus = altocumulus.ml2.driver:CumulusMechanismDriver

[global]
setup-hooks =
    pbr.hooks.setup_hook
