[metadata]
name = altocumulus
version = 0.1
description-file =
	README.md
author = Ian Unruh
author-email = ianunruh@gmail.com

[files]
packages =
	altocumulus
data_files =
  /etc/altocumulus = etc/altocumulus/config.yaml
	/etc/init.d = etc/init.d/altocumulus-api


[entry_points]
console_scripts =
	altocumulus-api = altocumulus.api:main
neutron.ml2.mechanism_drivers =
	cumulus = altocumulus.ml2.driver:CumulusMechanismDriver

[global]
setup-hooks =
	pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

